--- a/The success paradox.ipynb
+++ b/The success paradox.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -93,63 +93,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>candidate0</th>\n",
-       "      <td>27</td>\n",
-       "      <td>93</td>\n",
-       "      <td>30.30</td>\n",
+       "      <td>82</td>\n",
+       "      <td>10</td>\n",
+       "      <td>78.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>candidate1</th>\n",
-       "      <td>39</td>\n",
-       "      <td>78</td>\n",
-       "      <td>40.95</td>\n",
+       "      <td>50</td>\n",
+       "      <td>94</td>\n",
+       "      <td>52.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>candidate2</th>\n",
-       "      <td>67</td>\n",
-       "      <td>55</td>\n",
-       "      <td>66.40</td>\n",
+       "      <td>53</td>\n",
+       "      <td>98</td>\n",
+       "      <td>55.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>candidate3</th>\n",
-       "      <td>58</td>\n",
-       "      <td>39</td>\n",
-       "      <td>57.05</td>\n",
+       "      <td>81</td>\n",
+       "      <td>11</td>\n",
+       "      <td>77.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>candidate4</th>\n",
-       "      <td>46</td>\n",
-       "      <td>24</td>\n",
-       "      <td>44.90</td>\n",
+       "      <td>75</td>\n",
+       "      <td>87</td>\n",
+       "      <td>75.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>candidate5</th>\n",
-       "      <td>22</td>\n",
-       "      <td>59</td>\n",
-       "      <td>23.85</td>\n",
+       "      <td>37</td>\n",
+       "      <td>41</td>\n",
+       "      <td>37.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>candidate6</th>\n",
-       "      <td>15</td>\n",
-       "      <td>100</td>\n",
-       "      <td>19.25</td>\n",
+       "      <td>37</td>\n",
+       "      <td>9</td>\n",
+       "      <td>35.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>candidate7</th>\n",
-       "      <td>12</td>\n",
-       "      <td>52</td>\n",
-       "      <td>14.00</td>\n",
+       "      <td>88</td>\n",
+       "      <td>87</td>\n",
+       "      <td>87.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>candidate8</th>\n",
-       "      <td>41</td>\n",
-       "      <td>92</td>\n",
-       "      <td>43.55</td>\n",
+       "      <td>8</td>\n",
+       "      <td>26</td>\n",
+       "      <td>8.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>candidate9</th>\n",
-       "      <td>51</td>\n",
-       "      <td>70</td>\n",
-       "      <td>51.95</td>\n",
+       "      <td>96</td>\n",
+       "      <td>37</td>\n",
+       "      <td>93.05</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -157,19 +157,19 @@
       ],
       "text/plain": [
        "            skill  lucky  total data\n",
-       "candidate0     27     93       30.30\n",
-       "candidate1     39     78       40.95\n",
-       "candidate2     67     55       66.40\n",
-       "candidate3     58     39       57.05\n",
-       "candidate4     46     24       44.90\n",
-       "candidate5     22     59       23.85\n",
-       "candidate6     15    100       19.25\n",
-       "candidate7     12     52       14.00\n",
-       "candidate8     41     92       43.55\n",
-       "candidate9     51     70       51.95"
+       "candidate0     82     10       78.40\n",
+       "candidate1     50     94       52.20\n",
+       "candidate2     53     98       55.25\n",
+       "candidate3     81     11       77.50\n",
+       "candidate4     75     87       75.60\n",
+       "candidate5     37     41       37.20\n",
+       "candidate6     37      9       35.60\n",
+       "candidate7     88     87       87.95\n",
+       "candidate8      8     26        8.90\n",
+       "candidate9     96     37       93.05"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,29 +196,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "77.8 % of lucky\n",
-      "99.6 % of lucky\n",
+      "77.73 % of lucky\n",
+      "98.67 % of skill\n",
       "              skill  lucky  total data\n",
-      "candidate684     99     97       98.90\n",
-      "candidate950    100     75       98.75\n",
-      "candidate556     99     88       98.45\n",
-      "candidate709    100     67       98.35\n",
-      "candidate944    100     62       98.10\n"
+      "candidate11     100     86       99.30\n",
+      "candidate86      99     97       98.90\n",
+      "candidate694     99     96       98.85\n",
+      "candidate952     99     95       98.80\n",
+      "candidate897     99     84       98.25\n",
+      "candidate182    100     60       98.00\n",
+      "candidate538     98     98       98.00\n",
+      "candidate77     100     52       97.60\n",
+      "candidate138    100     44       97.20\n",
+      "candidate879     97     96       96.95\n",
+      "candidate617     98     74       96.80\n",
+      "candidate632     97     93       96.80\n",
+      "candidate555     97     87       96.50\n",
+      "candidate271    100     25       96.25\n",
+      "candidate689     97     79       96.10\n"
      ]
     }
    ],
    "source": [
-    "total_score = x.sort_values('total data', axis = 0, ascending = False).head(5)\n",
+    "total_score = x.sort_values('total data', axis = 0, ascending = False).head(15)\n",
     "\n",
     "print(round(total_score['lucky'].mean(), 2), '% of lucky')\n",
-    "print(round(total_score['skill'].mean(), 2), '% of lucky')\n",
+    "print(round(total_score['skill'].mean(), 2), '% of skill')\n",
     "print(total_score)"
    ]
   },
@@ -231,29 +241,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20.0 % of lucky\n",
-      "100.0 % of lucky\n",
+      "46.13 % of lucky\n",
+      "99.47 % of skill\n",
       "              skill  lucky  total data\n",
-      "candidate958    100     28       96.40\n",
-      "candidate439    100     11       95.55\n",
-      "candidate591    100     20       96.00\n",
-      "candidate565    100      8       95.40\n",
-      "candidate502    100     33       96.65\n"
+      "candidate734    100     17       95.85\n",
+      "candidate11     100     86       99.30\n",
+      "candidate485    100      9       95.45\n",
+      "candidate182    100     60       98.00\n",
+      "candidate271    100     25       96.25\n",
+      "candidate138    100     44       97.20\n",
+      "candidate77     100     52       97.60\n",
+      "candidate465     99     20       95.05\n",
+      "candidate352     99     31       95.60\n",
+      "candidate952     99     95       98.80\n",
+      "candidate86      99     97       98.90\n",
+      "candidate22      99     27       95.40\n",
+      "candidate681     99      7       94.40\n",
+      "candidate251     99     26       95.35\n",
+      "candidate694     99     96       98.85\n"
      ]
     }
    ],
    "source": [
-    "nolucky_score = x.sort_values('skill', axis = 0, ascending = False).head(5)\n",
+    "nolucky_score = x.sort_values('skill', axis = 0, ascending = False).head(15)\n",
     "\n",
     "print(round(nolucky_score['lucky'].mean(), 2), '% of lucky')\n",
-    "print(round(nolucky_score['skill'].mean(), 2), '% of lucky')\n",
+    "print(round(nolucky_score['skill'].mean(), 2), '% of skill')\n",
     "print(nolucky_score)"
    ]
   },
